# llm-connect

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
db/check/: checking.sql  insert-tags.sql  view-message.sql  view_ap.sql  view_interaction.sql
db/migration/: V10__change_card_id_to_uuid.sql  V12__add_scenario_schema.sql  V13__create_scenario_template_table.sql  V14__create_scenario_table.sql  V15__add_fields_and_referencial_integrity_for_message.sql  V16__add_field_state_to_scenario_table.sql  V17__create_atomic_point_table.sql  V18__create_tag_table.sql  V19__create_atomicpoint_tag_table.sql  V1__create_message_table.sql  V20__add_conversation_table.sql  V21__fix_message_table.sql  V22__create_table_session.sql  V23__create_progress_table.sql  V24__create_interaction_table.sql  V25__add_conversation_id_to_session_table.sql  V26__add_bkt_to_atomic_point_table.sql  V27__add_mastery_table.sql  V28__add_atomic_point_relation_table.sql  V29__change_id_of_atomic_point.sql  V2__create_vocab_table.sql  V30__atomic_point_embedding.sql  V7__create_card_table.sql
migrations/: V11__create_learner_card.sql  V3__create_learner_table.sql  V4__drop_vocab_table.sql  V5__create_dictionary_table.sql  V6__create_deck_table.sql  V8__add_default_value_of_is_shared_table_deck.sql  V9__change_deck_id_to_uuid.sql
scripts/: seed_atomic_points.py
sql/: checking.sql
src/llm_connect/: __init__.py  app.py  file.py  logger.py  main.py
tools/eval/: README.md  intent_eval.py  (+5 more)
(+185 files in other folders)
