[project]
name = "llm-connect"
version = "0.1.0"
description = ""
authors = [
    {name = "trungdung1711",email = "trungdunglebui17112004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "cryptography (>=46.0.3,<47.0.0)"
]

[tool.poetry]
packages = [{include = "llm_connect", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
